# nixops-hetznercloud

./: .flake8  .gitignore  .travis.yml  README.md  coverage-tests.py  default.nix  flake.nix  overrides.nix  pyproject.toml  release.nix  setup.cfg  shell.nix  tests.py
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link
.github/workflows/: ci.yaml
ci/: check-flake8.sh  check-mypy.sh
data/: nixos-infect
examples/: certificate.nix  floating-ip.nix  floating-ips.nix  load-balancers.nix  network.nix  networks.nix  server.nix  ssh-key.nix  test.nix  trivial-server.nix  volume.nix  volumes.nix
nixops_hcloud/: hcloud-utils.py  plugin.py
nixops_hcloud/backends/: hcloud.py  options.py
nixops_hcloud/nix/: certificate.nix  common-hcloud-auth-options.nix  common-hcloud-options.nix  default.nix  floating-ip.nix  hcloud.nix  lib.nix  load-balancer.nix  network-route.nix  network-subnet.nix  network.nix
nixops_hcloud/resources/types/: __init__.py  hcloud_floating_ip.py  hcloud_load_balancer.py  hcloud_network.py  hcloud_rdns.py  hcloud_server.py  hcloud_volume.py
nixops_hetznercloud/: hetznercloud_common.py  hetznercloud_utils.py  plugin.py
nixops_hetznercloud/backends/: hetznercloud.py  options.py
nixops_hetznercloud/data/: nixos-infect
nixops_hetznercloud/nix/: certificate.nix  common-hetznercloud-auth-options.nix  common-hetznercloud-options.nix  common-volume-options.nix  default.nix  floating-ip.nix  hetznercloud.nix  lib.nix  load-balancer-healthcheck.nix  load-balancer-service.nix  load-balancer.nix  network-route.nix  network-subnet.nix  network.nix  ssh-key.nix  volume.nix
nixops_hetznercloud/resources/: .#volume.py  __init__.py  certificate.py  floating_ip.py  hetznercloud_common.py  load_balancer.py  network.py  ssh_key.py  volume.py
nixops_hetznercloud/resources/types/: certificate.py  floating_ip.py  load_balancer.py  network.py  rdns.py  ssh_key.py  volume.py
tests/: __init__.py
tests/functional/: __init__.py  single_server_base.nix  single_server_test.py  test_deploys_nixos.py  test_deploys_server.py  test_start_starts.py  test_starting_starts.py  test_stop_stops.py  test_stopping_stops.py
tests/unit/: test_sample.py
