[tool.poetry]
name = "nixops_hetznercloud"
version = "0.1.0"
description = "NixOps Hetzner Cloud plugin"
authors = ["lukebfox <mail@lukebentleyfox.net>"]
license = "LGPL-3.0-only"
include = [ "nixops_hetznercloud/nix/*.nix" ]

[tool.poetry.dependencies]
python = "~3.8"
hcloud = "1.8.1"
typing-extensions = "^3.7.4"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
flake8 = "^3.8.2"
pytest = "^5.4.3"
pytest-xdist="1.34.0"
pytest-cov = "^2.10.0"

[tool.poetry.plugins."nixops"]
hetznercloud = "nixops_hetznercloud.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
