[tool.poetry]
name = "nixops_hetznercloud"
version = "0.1.1"
description = "NixOps Hetzner Cloud plugin"
authors = ["lukebfox <mail@lukebentleyfox.net>"]
license = "LGPL-3.0-only"
include = [ "nixops_hetznercloud/nix/*.nix" ]

[tool.poetry.dependencies]
python = "~3.10"
hcloud = "1.18.0"
typing-extensions = "^3.7.4"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}

[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^6.0.0"
pytest-xdist="2.5.0"
pytest-cov = "^4.0.0"

[tool.poetry.plugins."nixops"]
hetznercloud = "nixops_hetznercloud.plugin"

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"
